--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+     <header class="header container">
+      <nav class="header-list">
         <a class="logotype" href="./index.html">
           <span class="logo-left">Web</span
           ><span class="logo-right">Studio</span>
@@ -26,7 +26,7 @@
           <li><a class="link-item" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-address">
         <ul class="contact-menu">
           <li>
             <a class="contact-mail" href="mailto:info@devstudio.com"
@@ -42,9 +42,9 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="container portfolio">
         <h1 class="hidden">Navigation</h1>
-        <ul>
+        <ul class="portfolio-butn">
           <li><button class="potfolio-button" type="button">All</button></li>
           <li>
             <button class="potfolio-button" type="button">Web Site</button>
@@ -55,79 +55,81 @@
             <button class="potfolio-button" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="list-portfolio">
+        <ul class="list-portfolio container">
           <li>
-            <img src="./images/portfolio1.jpg" alt="Banking App" width="360" />
-            <h2 class="portfolio-item">Banking App Interface Concept</h2>
-            <p class="portfolio-menu">App</p>
+            <img class="pic" src="./images/portfolio1.jpg" alt="Banking App" width="360" />
+            <div class="picture"><h2 class="portfolio-item">Banking App Interface Concept</h2>
+            <p class="portfolio-menu">App</p></div>
           </li>
-          <li>
-            <img
+          <div>
+            <img class="pic"
               src="./images/portfolio2.jpg"
               alt="phone in hand"
               width="360"
             />
-            <h2 class="portfolio-item">Cashless Payment</h2>
-            <p class="portfolio-menu">Marketing</p>
+            <div class="picture"></div><h2 class="portfolio-item">Cashless Payment</h2>
+            <p class="portfolio-menu">Marketing</p> </div>
           </li>
           <li>
-            <img src="./images/portfolio3.jpg" alt="laptop" width="360" />
-            <h2 class="portfolio-item">Meditaion App</h2>
-            <p class="portfolio-menu">App</p>
+            <img class="pic" src="./images/portfolio3.jpg" alt="laptop" width="360" />
+           <div class="picture"> <h2 class="portfolio-item">Meditaion App</h2>
+            <p class="portfolio-menu">App</p></div>
           </li>
           <li>
-            <img src="./images/portfolio4.jpg" alt="car" width="360" />
-            <h2 class="portfolio-item">Taxi Service</h2>
-            <p class="portfolio-menu">Marketing</p>
+            <img class="pic" src="./images/portfolio4.jpg" alt="car" width="360" />
+            <div class="picture"><h2 class="portfolio-item">Taxi Service</h2>
+            <p class="portfolio-menu">Marketing</p></div>
           </li>
           <li>
-            <img src="./images/portfolio5.jpg" alt="telephone" width="360" />
-            <h2 class="portfolio-item">Screen Illustrations</h2>
-            <p class="portfolio-menu">Design</p>
+            <img class="pic" src="./images/portfolio5.jpg" alt="telephone" width="360" />
+            <div class="picture"><h2 class="portfolio-item">Screen Illustrations</h2>
+            <p class="portfolio-menu">Design</p></div>
           </li>
           <li>
-            <img
+            <img class="pic"
               src="./images/portfolio6.jpg"
               alt="girl with a phone in her hands"
               width="360"
             />
-            <h2 class="portfolio-item">Online Courses</h2>
-            <p class="portfolio-menu">Marketing</p>
+           <div class="picture"> <h2 class="portfolio-item">Online Courses</h2>
+            <p class="portfolio-menu">Marketing</p> </div>
           </li>
           <li>
-            <img
+            <img class="pic"
               src="./images/portfolio7.jpg"
               alt="Stories Concept"
               width="360"
             />
-            <h2 class="portfolio-item">Instagram Stories Concept</h2>
-            <p class="portfolio-menu">Design</p>
+            <div class="picture"><h2 class="portfolio-item">Instagram Stories Concept</h2>
+            <p class="portfolio-menu">Design</p></div>
           </li>
           <li>
-            <img
+            <img class="pic"
               src="./images/portfolio8.jpg"
               alt="vegetables in a bag"
               width="360"
             />
-            <h2 class="portfolio-item">Organic Food</h2>
-            <p class="portfolio-menu">Web Site</p>
-          </li>
+            <div class="picture"><h2 class="portfolio-item">Organic Food</h2>
+            <p class="portfolio-menu">Web Site</p> </div>
+          </li> 
           <li>
-            <img src="./images/portfolio9.jpg" alt="Coffee" width="360" />
-            <h2 class="portfolio-item">Fresh Coffee</h2>
-            <p class="portfolio-menu">Web Site</p>
+            <img class="pic" src="./images/portfolio9.jpg" alt="Coffee" width="360" />
+            <div class="picture"><h2 class="portfolio-item">Fresh Coffee</h2>
+            <p class="portfolio-menu">Web Site</p></div>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer-content">
-      <a class="logotype-footer" href="./index.html">
-        <span class="logo-footer">Web</span>Studio</a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logotype-footer" href="./index.html">
+          <span class="logo-footer">Web</span>Studio</a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
